--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.0",
     "morgan": "^1.10.0",
+    "node-cron": "^4.1.0",
     "nodemailer": "^7.0.3",
     "passport": "^0.7.0",
     "zod": "^3.25.28"
