--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "morgan": "^1.10.0",
     "node-cron": "^4.1.0",
     "nodemailer": "^7.0.3",
+    "nodemon": "^3.1.10",
     "passport": "^0.7.0",
     "zod": "^3.25.28"
   }
